--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Yega Repartidor",
   "icons": [
     {
-      "src": "placeholder.svg",
+      "src": "delivery-icon.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "placeholder.svg",
+      "src": "delivery-icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
